--- a/index.html
+++ b/index.html
@@ -9,5 +9,23 @@
 </head>
 <body>
     
+    <div class="flex-container">
+        <div class="header"></div>
+        <div class="library">
+            <div class="grid-container">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div> 
+            </div>
+        </div>
+        <div class="footer"></div>
+    </div>
+
+
+
+
 </body>
 </html>
