--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css" />
-    <title>Library</title>
+    <title>Book Tracker</title>
 </head>
 <body>
     
     <div class="flex-container">
-        <div class="header"></div>
+        <div class="header" >
+            <H1 id="header_title">Book Tracker</H1>
+           <button id="addBook">Add Book</button>>
+        </div>
         <div class="library">
             <div class="grid-container">
                 <div class="card"></div>
