--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     <label for="pages"><b>Pages</b></label>
                     <input type="number" placeholder="Enter Pages" name="pages" required>
 
-                    <button type="submit" class="btn">Add</button>
-                    <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+                    <button type="submit" class="btn" id="addBookBtnForm">Add</button>
+                    <button type="button" class="btn cancel" id="cancelBookBtnForm" onclick="closeForm()">Close</button>
 
             </div>
 
