--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <div class="card"></div> 
             </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            <p>© Michael Iwanek, 2022</p>
+        </div>
     </div>
 
     
