removed button and added card with plus sign as way to add books.  got idea from another completed project of this type

--- a/index.html
+++ b/index.html
@@ -13,16 +13,12 @@
     <div class="flex-container">
         <div class="header" >
             <H1 id="header_title">Book Tracker</H1>
-           <button id="addBookbtn">Add Book</button>>
+         
         </div>
         <div class="library">
             <div class="grid-container">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div> 
+                <div class="add_card" id="add_card"><img id="add_book" src="./images/plus-sign.png"></div>
+         
             </div>
         </div>
         <div class="footer">
