--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="footer">
-            <p>© Michael Iwanek, 2022</p>
+            <p class="copyright">© Michael Iwanek, 2022</p>
         </div>
     </div>
 
