added book author and book pages to cards

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 <h1>Add Book</h1>
 
                     <label for="bookTitle"><b>Book Title</b></label>
-                    <input type="text" id="bookTitle" placeholder="Enter Book Title" value="" name="bookTitle" required>
+                    <input type="text" id="bookTitle" placeholder="Enter Book Title" value="" name="bookTitle" autocomplete="off" required>
 
                     <label for="authorName"><b>Book Author</b></label>
-                    <input type="text" id="authorName"  placeholder="Enter Author(s)" name="authorName" required>
+                    <input type="text" id="authorName"  placeholder="Enter Author(s)" name="authorName" autocomplete="off" required>
 
                     <label for="numPages"><b>Pages</b></label>
-                    <input type="number" id="numPages" placeholder="Enter Page Count" name="numPages" required>
+                    <input type="number" id="numPages" placeholder="Enter Page Count" name="numPages" autocomplete="off" required>
 
                     <button type="submit" class="btn" id="addBookBtnForm">Add</button>
                     <button type="button" class="btn cancel" id="cancelBookBtnForm" onclick="closeForm()">Close</button>
