--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                     <label for="numPages"><b>Pages</b></label>
                     <input type="number" id="numPages" placeholder="Enter Page Count" name="numPages" autocomplete="off" required>
 
+                    <label for="bookCover"><b>Book Cover URL</b></label>
+                    <input type="text" id="bookCover"  placeholder="Enter Book Cover URL" name="bookCover" autocomplete="off" required>
+
+                    <label for="isRead"><b>Read</b></label>
+                    <input type="checkbox" id="isRead" name="isRead" value="isRead">
+                   
                     <button type="submit" class="btn" id="addBookBtnForm">Add</button>
                     <button type="button" class="btn cancel" id="cancelBookBtnForm" onclick="closeForm()">Close</button>
 
