made it so duplicates are no longer added to the array by changing functions around

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          
         </div>
         <div class="library">
-            <div class="grid-container">
+            <div class="grid-container" id="grid-container">
                 <div class="add_card" id="add_card"><img id="add_book" src="./images/plus-sign.png"></div>
          
             </div>
