changed isRead from checkbox which was very small to a button which will change blue when clicked

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                     <label for="bookCover"><b>Book Cover URL</b></label>
                     <input type="text" id="bookCover"  placeholder="Enter Book Cover URL" name="bookCover" autocomplete="off" required>
 
-                    <label for="isRead"><b>Read</b></label>
-                    <input type="checkbox" id="isRead" name="isRead" value="isRead">
+                    <button type="isRead" class="isRead" id="isRead" value="no">Mark as Read</button>
                    
                     <button type="submit" class="btn" id="addBookBtnForm">Add</button>
                     <button type="button" class="btn cancel" id="cancelBookBtnForm" onclick="closeForm()">Close</button>
