fixed HMTL not commented out; increased grid column by 1

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
 
     
 
-    //This code section initializes Firebase for cloud storage and login authentication.  Per Firebase documentation, it is alright to publicly expose
-     the API key here.  Normally the API key should never be exposed on GitHub.
+<!-- This code section initializes Firebase for cloud storage and login authentication.  Per Firebase documentation, it is alright to publicly expose
+the API key here.  Normally the API key should never be exposed on GitHub.  Could not get Firebase to work yet so this section is saved in case 
+I try to add it later -->
 
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
