added a button to load sample books instead of an alert pop up

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="header" >
             <H1 id="header_title">Book Tracker</H1>
             <button id = "clearStorageLocal" onclick="window.localStorage.clear();">Clear All Local Storage</button>
+            <button id = "loadSampleButton" onclick="loadSampleLibrary ()">Load Sample Books</button>
         </div>
         <div class="library">
             <div class="grid-container" id="grid-container">
