--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <input type="text" id="authorName"  placeholder="Enter Author(s)" name="authorName" autocomplete="off" required>
 
                     <label for="numPages"><b>Pages</b></label>
-                    <input type="number" id="numPages" placeholder="Enter Page Count" name="numPages" autocomplete="off" required>
+                    <input type="number" id="numPages" placeholder="Enter Page Count" name="numPages" autocomplete="off" >
 
                     <label for="bookCover"><b>Book Cover URL</b></label>
                     <input type="text" id="bookCover"  placeholder="Enter Book Cover URL" name="bookCover" autocomplete="off" required>
