--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <label for="bookCover"><b>Book Cover URL</b></label>
                     <input type="text" id="bookCover"  placeholder="Enter Book Cover URL" name="bookCover" autocomplete="off" required>
 
-                    <button type="button" class="isRead" id="isRead" value="no">Mark as Read</button>
+                    <button type="button" class="isRead" id="isRead" value="no">Unread</button>
                    
                     <button type="submit" class="btn" id="addBookBtnForm">Add</button>
                     <button type="button" class="btn cancel" id="cancelBookBtnForm" onclick="closeForm()">Close</button>
